tests/neg-custom-args/captures/cc-this.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-this.scala:10:15 --------------------------------------
10 |    val y: C = this // error
   |               ^^^^
   |               Found:    (C.this : C^{C.this.x})
   |               Required: C
   |
   |               Note that capability `C.this.x` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/cc-this.scala:12:15 -----------------------------------------------------------
12 |  class C2(val x: () => Int): // error
   |               ^
   |               reference `C2.this.x` is not included in the allowed capture set {} of the self type of class C2
-- Error: tests/neg-custom-args/captures/cc-this.scala:19:8 ------------------------------------------------------------
19 |  class C4(val f: () => Int) extends C3 // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |reference `C4.this.f` captured by this self type is not included in the allowed capture set {} of pure base class class C3
